# techlordmedia

./: .gitignore  .vercelignore  RELEASE.md  vercel.json
.github/workflows/: release.yml
api/: admin-status.ts  create-virtual-account.ts  end-session.ts  heartbeat.ts  paymentpoint-webhook.ts  start-session.ts  supabase.ts  verify-payment.ts  version.ts
app/: .vercelignore  package-lock.json  package.json  server.js
app/api/: create-virtual-account.ts  end-session.ts  heartbeat.ts  paymentpoint-webhook.ts  session-status.ts  start-session.ts  supabase.ts  verify-payment.ts
app/electron/: main.js
app/scripts/: clean-build.cjs
app/src/context/: AuthContext.tsx
app/src/lib/: api-client.ts  pricing.ts  supabase.ts
app/src/pages/: AdminDashboard.tsx  Dashboard.tsx  Settings.tsx  Subscription.tsx
native-camera/: CMakeLists.txt  build.ps1
native-camera/src/publisher/: surevideotool_publisher.cpp
native-camera/src/tools/registrar/: main.cpp
native-camera/src/virtualcam/: dllmain.cpp  mf_virtual_camera_source.cpp  virtual_camera_source.cpp
shared/: logged-supabase-client.ts  payment-activity-log.ts  paymentpoint-payment.ts  paymentpoint-virtual-account-cache.ts  paymentpoint-virtual-account.ts  paymentpoint-webhook-cache.ts  server-logger.ts
supabase/: full_setup.sql
